--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header {
 }
 
 div {
-	width: 800px;
+	width: 80%;
 	margin: auto;
 }
 
@@ -42,7 +42,7 @@ div {
 }
 
 main {
-	width: 800px;
+	width: 80%;
 	margin: auto;
 	background-color: #b0e0e0;
 	overflow: auto;
