--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ header {
 }
 
 div {
-	width: 80%;
+	width: 800px;
 	margin: auto;
 }
 
@@ -42,7 +42,7 @@ div {
 }
 
 main {
-	width: 80%;
+	width: 800px;
 	margin: auto;
 	background-color: #b0e0e0;
 	overflow: auto;
@@ -59,6 +59,29 @@ img {
 	padding: 10px;
 }
 
+#table-1 th{
+  border: 1px solid black;
+}
+
+#table-2 th{
+  border: 1px solid black;
+}
+
+#table-1 {
+  border: 1px solid black;
+}
+
+#table-2 {
+  border: 1px solid black;
+}
+
+#table-1 td{
+  border: 1px solid black;
+}
+
+#table-2 td{
+  border: 1px solid black;
+}
 
 
 
