--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
  * Light Grey = #cfd2cd
  */
 
-body {
+ body {
 	background-color: #eff9f9;
 }
 
@@ -14,6 +14,35 @@ nav li {
 	list-style-type: none;
 	display: inline-block;
 }
+
+p {
+
+	font-size:large;
+
+}
+
+
+h4 {
+	font-size:x-large;
+
+}
+
+.button {
+	background-color: #4CAF50; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+  }
+
+
+
+
+
+
 
 nav li a {
 	text-decoration: none;
@@ -29,8 +58,17 @@ nav li a:hover {
 header {
 	background-color: #60c0c0;
 	color: #1b1c43; 
-	margin: 3px;
+	margin: 7px;
+	text-shadow: 3px 3px 3.5px;
+	text-align: center;
+	font-size:xx-large;
+
 }
+
+h2 {
+	text-shadow: 0.5px 0.5px 2.5px;
+	text-decoration-color:cornsilk;
+  }
 
 div {
 	width: 80%;
@@ -46,7 +84,7 @@ main {
 	margin: auto;
 	background-color: #b0e0e0;
 	overflow: auto;
-	padding: 20px;
+	padding: 65px;
 }	
 
 footer {
@@ -56,7 +94,6 @@ footer {
 
 img {
 	float:right;
-	padding: 10px;
 }
 
 #table-1 th{
