--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
  * Light Grey = #cfd2cd
  */
 
- body {
+body {
 	background-color: #eff9f9;
 }
 
@@ -16,19 +16,15 @@ nav li {
 }
 
 p {
-
 	font-size:large;
-
 }
-
 
 h4 {
 	font-size:x-large;
-
 }
 
 .button {
-	background-color: #4CAF50; /* Green */
+	background-color: #60c0c0;
 	border: none;
 	color: white;
 	padding: 15px 32px;
@@ -36,13 +32,7 @@ h4 {
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
-  }
-
-
-
-
-
-
+}
 
 nav li a {
 	text-decoration: none;
@@ -59,10 +49,10 @@ header {
 	background-color: #60c0c0;
 	color: #1b1c43; 
 	margin: 7px;
-	text-shadow: 3px 3px 3.5px;
+	text-shadow: 2px 2px 2.5px;
 	text-align: center;
 	font-size:xx-large;
-
+	box-shadow: 3px 3px 3.5px darkgrey;
 }
 
 h2 {
@@ -90,36 +80,41 @@ main {
 footer {
 	background-color: #60c0c0;
 	color: #1b1c43;
+	box-shadow: 3px 3px 3.5px darkgrey;
 }
 
 img {
 	float:right;
+	box-shadow: 4px 4px 4.5px;
 }
 
 #table-1 th{
-  border: 1px solid black;
+	border: 1px solid black;
 }
 
 #table-2 th{
-  border: 1px solid black;
+	border: 1px solid black;
 }
 
 #table-1 {
-  border: 1px solid black;
+	border: 1px solid black;
 }
 
 #table-2 {
-  border: 1px solid black;
+	border: 1px solid black;
 }
 
 #table-1 td{
-  border: 1px solid black;
+	border: 1px solid black;
 }
 
 #table-2 td{
-  border: 1px solid black;
+	border: 1px solid black;
 }
 
+a {
+	text-decoration: none;
+}
 
 
 /* color: #212245; */
